--- a/cartridges/int_linkmoney_sfra/cartridge/client/default/scss/linkMoney.scss
+++ b/cartridges/int_linkmoney_sfra/cartridge/client/default/scss/linkMoney.scss
@@ -12,3 +12,110 @@
 .edit-bank-button:hover {
     text-decoration: underline;
 }
+
+.tooltip-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
+
+.tooltip-fade {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(41, 37, 37, 0.2);
+}
+
+.tooltip-popup {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    height: 600px;
+    width: 500px;
+    background: white;
+    border: 1px solid gray;
+}
+
+.tooltip-title {
+    width: 100%;
+    font-size: 26px;
+    font-weight: 600;
+}
+
+.tooltip-steps {
+    width: 100%;
+}
+
+.tooltip-step {
+    line-height: 20px;
+    width: 86px;
+}
+
+.tooltip-devider {
+    width: 100%;
+    height: 2px;
+    background-color: #D44211;
+}
+
+.tooltip-benefit {
+    width: 100%;
+    padding-right: 45px;
+}
+
+.tooltip-image-container {
+    flex-shrink: 0;
+    width: 80px;
+    height: 60px;
+}
+
+.tooltip-cancel {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+}
+
+@media (max-width: 480px) {
+    .tooltip-popup {
+        z-index: 9999;
+        height: unset;
+        width: 95%;
+    }
+
+    .tooltip-logo {
+        height: 34px;
+    }
+
+    .tooltip-title {
+        font-size: 18px;
+    }
+
+    .tooltip-step {
+        img {
+            height: 24px;
+        }
+        &:first-child {
+            img {
+                height: 10px;
+            }
+        }
+    }
+
+    .tooltip-benefit {
+        padding-right: 0;
+        line-height: 18px;
+        margin-bottom: 8px;
+    }
+
+    .tooltip-image-container {
+        width: 46px;
+        height: 46px;
+
+        img {
+            height: 20px;
+        }
+    }
+}
